<resources>
    <string name="app_name">AU Restaurant Owner</string>
    <string name="facebook_app_id">356833278123060</string>
    <string name="fb_login_protocol_scheme">fb356833278123060</string>
    <string name="title_activity_register">Register</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_restaurant_list">RestaurantList</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="tvTel">Tel</string>
    <string name="rest_description">Description</string>
    <string name="rest_addr">Address</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="save">Save</string>
    <string name="title_activity_food_menu_list">FoodMenuList</string>
    <string name="caption">Caption</string>
    <string name="menu_name">Menu Name</string>
    <string name="price">Price</string>

</resources>
